--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Mad_assignment2"
         tools:targetApi="31">
         <activity
-            android:name=".screens.BoothBookingPage"
+            android:name=".screens.BoothBookingPreviewScreen"
             android:exported="false" />
         <activity
              android:name=".screens.EventPreviewScreen"
