--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.Mad_assignment2"
         tools:targetApi="31">
         <activity
-            android:name=".screens.BoothBookingPreviewScreenTFF"
-            android:exported="false" />
-        <activity
-            android:name=".screens.BoothBookingPreviewScreen"
+            android:name=".screens.SplashScreen"
             android:exported="false" />
         <activity
             android:name=".screens.BoothBookingPreviewScreen"
