--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.Mad_assignment2"
         tools:targetApi="31">
         <activity
+            android:name=".screens.HomeScreenDrawerN"
+            android:exported="false" />
+        <activity
             android:name=".screens.BoothBookingPreviewScreen"
             android:exported="false" />
         <activity
-             android:name=".screens.EventPreviewScreen"
+            android:name=".screens.EventPreviewScreen"
             android:exported="false" />
         <activity
             android:name=".screens.VendorSignUpScreen"
@@ -32,6 +35,9 @@
             android:exported="false" />
         <activity
             android:name=".screens.HomeScreen"
+            android:exported="false" />
+        <activity
+            android:name=".screens.HomeScreenDrawer"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
